Add files and dependencies. Closes #18.